Fixed reset all for pie chart
Fixed reset all for track selection
Basics: Moved tracks to the right since they were going offscreen
# 2.08.01 (56115) Sep 2, 2011
Improved friction and stickiness controls
Added bar graphs
Removed keyboard-driven rocket thrusters
Moved the legend out from behind the control panel
Fixed sky graphics
Moved the house to the right and the mountains to the left
Added buttons to switch track
Added control panel in intro tab
Moved help to Energy Skate Park
Started new energy-skate-park-basics flavor
Made fields final, removed unused classes
Reformatted and optimized imports
# 2.08.00 (53070) Jun 12, 2011
6/12/11 > added new translation credits features
# 2.07.01 (52603) Jun 2, 2011
4/27/2011 switched Microsoft Clip Art Images for 'bugboard.gif', 'bulldog.png', 'rocket5.png', 'ruler-thumb.png'
Moved spline computations from phetcommon to common/spline since it depends on Jama
Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
Optimize imports, see #2071
# 2.07.00 (38314) Jan 28, 2010
1/28/10 redeployed to production server.
# 2.06.03 (38266) Jan 26, 2010
1/26/10 > Removed the "Bounciness" and "Stickiness" controls for the skater, see 2129.
# 2.06.02 (38254) Jan 25, 2010
1/25/10 Got rid of some warnings that were being printed to the console.
# 2.06.01 (38252) Jan 25, 2010
1/25/10 >Added back the "Tracks" menu (by popular demand).
# 2.06.00 (37993) Jan 9, 2010
1/9/10 public version for milestone "full redeploy, 2010 Q1"
# 2.05.10 (37904) Jan 5, 2010
Switched to use PaintImmediateDialog instead of ESPPaintImmediateDialog, see #2042
# 2.05.09 (37764) Dec 29, 2009
> Performance improvements
Made it so that the PaintImmediateDialog repaint timer doesn't repeat, see #2042, see #2072
> Made the window come up at the default size of 1024x768 and centered, see #2071
> Removed the phet logo from the control panel so that vertical scroll bars are not visible by default
# 2.05.08 (37622) Dec 19, 2009